# smoothlife

./: .gitignore  README.md  smoothlife.cabal  stack.yaml
samples/: config.txt
src/: Main.hs
src/GenArt/: SmoothLife.hs
