name:          smoothlife
version:       0.0.0
description:   Smoothlife in Haskell
copyright:     (c) 2012 Travis Brown
license-file:  LICENSE.txt
author:        Travis Brown
maintainer:    travisrobertbrown@gmail.com
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:     -Wall -O2 -rtsopts -threaded
  hs-source-dirs:  src
  exposed-modules: GenArt.SmoothLife
  build-depends:
    ConfigFile >= 1.1.4,
    base >= 4,
    cmdargs >= 0.10.20,
    filepath,
    hip == 1.5.6.0,
    monad-loops >= 0.4.3,
    random >= 1.1,
    repa >= 3.4.1,
    repa-algorithms >= 3.4.1.3

executable smoothlife
  ghc-options:     -Wall -O2 -rtsopts -threaded
  hs-source-dirs:  src
  main-is:         Main.hs

